--- a/message/templates/base.html
+++ b/message/templates/base.html
@@ -10,7 +10,12 @@
     <h1>留言板</h1>
     <div>
         <a href="/">首頁</a>
-        <a href="/message/create/">新增留言</a>
+        {% if user.is_authenticated %}
+            <a href="/message/create/">新增留言</a>
+            {{ user.username }}<a href="/user/login/">登出</a>
+        {% else %}
+            <a href="/user/login/">登入</a>
+        {% endif %}
     </div>
     <div>{% block content %}{% endblock %}</div>
 </body>
