--- a/message/templates/message/message_list.html
+++ b/message/templates/message/message_list.html
@@ -5,6 +5,9 @@
 <ul>
   {% for message in message_list %}
     <li>
+      {% if user.is_authenticated %}
+        <a href="{{ message.id }}/delete/">刪除</a>
+      {% endif %}
       {{ message.publication_date }}
       <a href="{{ message.id }}/">{{ message.subject }}</a>
     </li>
